// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Description should accept nodes 1`] = `
<div
  className="description"
>
  <strong>
    description
  </strong>
  <em>
    test
  </em>
</div>
`;

exports[`Product Description should have a default structure 1`] = `
<div
  className="description"
>
  description content
</div>
`;
